--- a/package.json
+++ b/package.json
@@ -4,15 +4,11 @@
   "description": "",
   "main": "teste.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node miner.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "coin-imp": "^1.0.6",
-    "require-from-url": "^3.1.2"
-  },
-  "scripts": {
-    "start": "node miner.js"
+    "coin-imp": "^1.0.6"
   }
 }
